--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-MONGODB_URI = "mongodb+srv://apanu2007:DKFrqtiLxIildHKr@cluster0.suoptro.mongodb.net/job-portal"
+MONGODB_URI=mongodb+srv://apanu2007:anshu@cluster0.wmijffa.mongodb.net/LMS
 
-
-CLERK_WEBHOOK_SECRET = "whsec_XXuOXbnnLzLXqnqT7DPtL369Erq7DC4e"
+PORT=5003
+CLERK_WEBHOOK_SECRET = "whsec_iqKy6dnIGUXFw7dXJdCBa/gZ1Y9EStsb"
 
 //DKFrqtiLxIildHKr
