--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://apanu2007:anshu@cluster0.wmijffa.mongodb.net/LMS
 
 PORT=5003
-CLERK_WEBHOOK_SECRET = "whsec_iqKy6dnIGUXFw7dXJdCBa/gZ1Y9EStsb"
+CLERK_WEBHOOK_SECRET=whsec_c1toAUXGr9HY7gnzu2IpYjy2zhiL76Ee
 
 //DKFrqtiLxIildHKr
