--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,7 @@ MONGODB_URI=mongodb+srv://apanu2007:anshu@cluster0.wmijffa.mongodb.net/LMS
 
 PORT=5003
 CLERK_WEBHOOK_SECRET=whsec_c1toAUXGr9HY7gnzu2IpYjy2zhiL76Ee
+CLERK_PUBLISHABLE_KEY=pk_test_bmVlZGVkLXdvbWJhdC05MC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_YMqpIH6f2JQvjQWGPjrMVFfzzsA9bix0iKHZhnrujT
 
 //DKFrqtiLxIildHKr
