--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,9 @@ CLERK_PUBLISHABLE_KEY=pk_test_bmVlZGVkLXdvbWJhdC05MC5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_YMqpIH6f2JQvjQWGPjrMVFfzzsA9bix0iKHZhnrujT
 
 //DKFrqtiLxIildHKr
+
+
+
+CLOUDINARY_CLOUD_NAME=dcfl4i8ue
+CLOUDINARY_API_KEY=691857149269598
+CLOUDINARY_API_SECRET=fKxv_d0bPJbOlt81EsBamOG24Eo
