--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.7.58",
     "@sentry/node": "^9.13.0",
     "@sentry/profiling-node": "^9.13.0",
     "bcrypt": "^5.1.1",
