--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
     "punycode": "^2.3.1",
+    "stripe": "^20.1.0",
     "svix": "^1.64.1"
   }
 }
