backend to frontend connect

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
 VITE_CLERK_PUBLISHABLE_KEY= 'pk_test_bmVlZGVkLXdvbWJhdC05MC5jbGVyay5hY2NvdW50cy5kZXYk'
 
 VITE_CURRENCY = '₹'
+
+VITE_BACKEND_URL = 'http://localhost:5003'
