--- a/frontend/.env
+++ b/frontend/.env
@@ -3,3 +3,4 @@ VITE_CLERK_PUBLISHABLE_KEY= 'pk_test_bmVlZGVkLXdvbWJhdC05MC5jbGVyay5hY2NvdW50cy5
 VITE_CURRENCY = '₹'
 
 VITE_BACKEND_URL = 'http://localhost:5003'
+# VITE_BACKEND_URL=https://lms-back-omega.vercel.app
